Fix API POST methods (#60)
