# server/generated/swagger-ui/service.swagger.json
@@ -104,6 +104,39 @@
         ]
       }
     },
+    "/api/v1/namespaces/workflows/start": {
+      "post": {
+        "summary": "StartWorkflowExecution starts a new long running workflow instance.  It will create the instance with\n'WorkflowExecutionStarted' event in history and also schedule the first WorkflowTask for the worker to make the\nfirst command for this instance.  It will return 'WorkflowExecutionAlreadyStartedFailure', if an instance already\nexists with same workflowId.",
+        "operationId": "WorkflowService_StartWorkflowExecution",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1StartWorkflowExecutionResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1StartWorkflowExecutionRequest"
+            }
+          }
+        ],
+        "tags": [
+          "WorkflowService"
+        ]
+      }
+    },
     "/api/v1/namespaces/{namespace}": {
       "get": {
         "summary": "DescribeNamespace returns the information and configuration for a registered namespace.",
@@ -479,6 +512,43 @@
         ]
       }
     },
+    "/api/v1/namespaces/{namespace}/workflows/count": {
+      "get": {
+        "summary": "CountWorkflowExecutions is a visibility API to count of workflow executions in a specific namespace.",
+        "operationId": "WorkflowService_CountWorkflowExecutions",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1CountWorkflowExecutionsResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "namespace",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "query",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "WorkflowService"
+        ]
+      }
+    },
     "/api/v1/namespaces/{namespace}/workflows/open": {
       "get": {
         "summary": "ListOpenWorkflowExecutions is a visibility API to list the open executions in a specific namespace.",
@@ -681,7 +751,7 @@
         ]
       }
     },
-    "/api/v1/namespaces/{namespace}/workflows/{execution.workflow_id}/executions/{execution.run_id}:query": {
+    "/api/v1/namespaces/{namespace}/workflows/{execution.workflow_id}/executions/{execution.run_id}/query": {
       "post": {
         "summary": "QueryWorkflow returns query result for a specified workflow execution",
         "operationId": "WorkflowService_QueryWorkflow",
@@ -732,7 +802,7 @@
         ]
       }
     },
-    "/api/v1/namespaces/{namespace}/workflows/{workflow_execution.workflow_id}/executions/{workflow_execution.run_id}:cancel": {
+    "/api/v1/namespaces/{namespace}/workflows/{workflow_execution.workflow_id}/executions/{workflow_execution.run_id}/cancel": {
       "post": {
         "summary": "RequestCancelWorkflowExecution is called by application worker when it wants to request cancellation of a workflow instance.\nIt will result in a new 'WorkflowExecutionCancelRequested' event being written to the workflow history and a new WorkflowTask\ncreated for the workflow instance so new commands could be made. It fails with 'NotFoundFailure' if the workflow is not valid\nanymore due to completion or doesn't exist.",
         "operationId": "WorkflowService_RequestCancelWorkflowExecution",
@@ -783,7 +853,7 @@
         ]
       }
     },
-    "/api/v1/namespaces/{namespace}/workflows/{workflow_execution.workflow_id}/executions/{workflow_execution.run_id}:reset": {
+    "/api/v1/namespaces/{namespace}/workflows/{workflow_execution.workflow_id}/executions/{workflow_execution.run_id}/reset": {
       "post": {
         "summary": "ResetWorkflowExecution reset an existing workflow execution to WorkflowTaskCompleted event(exclusive).\nAnd it will immediately terminating the current execution instance.",
         "operationId": "WorkflowService_ResetWorkflowExecution",
@@ -834,7 +904,7 @@
         ]
       }
     },
-    "/api/v1/namespaces/{namespace}/workflows/{workflow_execution.workflow_id}/executions/{workflow_execution.run_id}:terminate": {
+    "/api/v1/namespaces/{namespace}/workflows/{workflow_execution.workflow_id}/executions/{workflow_execution.run_id}/terminate": {
       "post": {
         "summary": "TerminateWorkflowExecution terminates an existing workflow execution by recording WorkflowExecutionTerminated event\nin the history and immediately terminating the execution instance.",
         "operationId": "WorkflowService_TerminateWorkflowExecution",
@@ -878,88 +948,6 @@
             "schema": {
               "$ref": "#/definitions/v1TerminateWorkflowExecutionRequest"
             }
-          }
-        ],
-        "tags": [
-          "WorkflowService"
-        ]
-      }
-    },
-    "/api/v1/namespaces/{namespace}/workflows/{workflow_id}:start": {
-      "post": {
-        "summary": "StartWorkflowExecution starts a new long running workflow instance.  It will create the instance with\n'WorkflowExecutionStarted' event in history and also schedule the first WorkflowTask for the worker to make the\nfirst command for this instance.  It will return 'WorkflowExecutionAlreadyStartedFailure', if an instance already\nexists with same workflowId.",
-        "operationId": "WorkflowService_StartWorkflowExecution",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/v1StartWorkflowExecutionResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/runtimeError"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "namespace",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "workflow_id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/v1StartWorkflowExecutionRequest"
-            }
-          }
-        ],
-        "tags": [
-          "WorkflowService"
-        ]
-      }
-    },
-    "/api/v1/namespaces/{namespace}/workflows:count": {
-      "get": {
-        "summary": "CountWorkflowExecutions is a visibility API to count of workflow executions in a specific namespace.",
-        "operationId": "WorkflowService_CountWorkflowExecutions",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/v1CountWorkflowExecutionsResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/runtimeError"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "namespace",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "query",
-            "in": "query",
-            "required": false,
-            "type": "string"
           }
         ],
         "tags": [
